# bank-application

./: CMakeLists.txt  README.md  bank_structure.h  functions.c  functions.h  main.c  password_recovery.c  sha256.c  sha256.h
curl/: libcurl_a.lib
